k8s/api-gateway-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: api-gateway
spec: 
  selector:
    app: api-gateway
  ports:
    - protocol: TCP 
      port: 3000
      targetPort: 3000
  type: NodePort
